@@ -1,6 +1,7 @@
 === Current
 
  * Don't add items with less than min_tokens tokens in response to Atom PP calls.
+ * Fixed a couple more memory leaks.
 
 === 1.1.8 (7 April 2008)
 
